ApexBasics/force-app/main/default/objects/OpenPosition__c/OpenPosition__c.object-meta.xml
<CustomObject>
    <label>OpenPosition</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>OpenPosition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpenPositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>