ApexBasics/force-app/main/default/objects/OpenPosition__c/fields/Minimum_Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Experience_Required__c</fullName>
    <label>Minimum Experience Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>