ApexBasics/force-app/main/default/objects/OpenPosition__c/fields/Name_Of_Position__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Position__c</fullName>
    <label>Name Of Position</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>