ApexBasics/force-app/main/default/objects/OpenPosition__c/fields/Number_Of_Open_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Open_Positions__c</fullName>
    <label>Number Of Open Positions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>